[tool.poetry]
name = "pdf_tilte"
version = "0.1.0"
description = ""
authors = ["Ryu Tanabe <bellx2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
watchdog = "^3.0.0"
pypdf = "^3.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
